--- a/participant/public/locales/en/common.json
+++ b/participant/public/locales/en/common.json
@@ -52,12 +52,18 @@
     "title": "How it works",
     "note": "Note: This form does not guarantee your enrollment in WIC. Your eligibility will be confirmed when you have your recertification appointment with WIC.",
     "button": "Continue",
-    "answer": "We only need to collect information about WIC participants who have a recertification appointment.",
-    "answerHeader": "Answer questions about who is recertifying in your household",
-    "upload": "We will help you figure out which ones you need. If you usually have to show income information, like paystubs or tax returns, have those documents accessible before you start.",
-    "uploadHeader": "Upload any needed documents",
-    "appointment": "Your local WIC clinic staff will confirm the information and documents you sent.",
-    "appointmentHeader": "Later, attend your recertification appointment"
+    "answer": {
+      "body": "We only need to collect information about WIC participants who have a recertification appointment.",
+      "header": "Answer questions about who is recertifying in your household"
+    },
+    "upload": {
+      "body": "We will help you figure out which ones you need. If you usually have to show income information, like paystubs or tax returns, have those documents accessible before you start.",
+      "header": "Upload any needed documents"
+    },
+    "appointment": {
+      "body": "Your local WIC clinic staff will confirm the information and documents you sent.",
+      "header": "Later, attend your recertification appointment"
+    }
   },
   "Layout": {
     "footer1": {
