Remove hard line break in page title.

--- a/participant/public/locales/en/common.json
+++ b/participant/public/locales/en/common.json
@@ -83,7 +83,7 @@
       ],
       "text": "This institution is an equal opportunity provider. <0>USDA Non-Discrimination Statement</0>"
     },
-    "header": "Montana WIC<br />Recertification Portal"
+    "header": "Montana WIC Recertification Portal"
   },
   "Name": {
     "title": "What's your name?",
