/details: make all fields required except for preferred name.

--- a/participant/public/locales/en/common.json
+++ b/participant/public/locales/en/common.json
@@ -47,7 +47,7 @@
   "Details": {
     "participantCard": {
       "cardHeader": "Participant",
-      "cardFooter": "Add another participant?"
+      "cardFooter": "Remove Participant #"
     },
     "button": "Continue",
     "intro": "Reminder: We only need to collect information about WIC participants who have a recertification appointment.",
