--- a/participant/public/locales/en/common.json
+++ b/participant/public/locales/en/common.json
@@ -27,6 +27,15 @@
     "yes": "Yes",
     "no": "No"
   },
+  "Contact": {
+    "button": "Continue",
+    "title": "Additional information",
+    "phoneNumber": "Your phone number",
+    "additionalInfo": {
+      "label": "Is there anything else you'd like to share with WIC staff?",
+      "hint": "For example: Nutrition updates, household changes, or questions"
+    }
+  },
   "Count": {
     "title": "Who in your household is recertifying?",
     "intro": "We only need to collect information about WIC participants who have a recertification appointment.",
