[PRP-230] Adding warning for navigation attempts, new test, link to return to start

--- a/participant/public/locales/en/common.json
+++ b/participant/public/locales/en/common.json
@@ -46,7 +46,9 @@
   "Confirm": {
     "title": "Thanks for starting your recertification!",
     "intro": "During your appointment, your local WIC clinic staff will confirm the information you sent.",
-    "submitted": "Form submitted at: "
+    "startOverText": "Start over",
+    "submitted": "Form submitted at: ",
+    "previouslySubmittedAlert": "You cannot review information after it’s submitted. If you need to make changes or add additional information, you must go through this form again. "
   },
   "Contact": {
     "button": "Continue",
