Add temporary js required message.

--- a/participant/public/locales/en/common.json
+++ b/participant/public/locales/en/common.json
@@ -154,7 +154,7 @@
     "fileTypeError": "This is not a valid file type.",
     "fileSizeError": "This file is over the maximum size",
     "fileCountError": "You have reached the maximum number of files; please remove files before adding additional files",
-    "noScriptMessage": "File previews will not work with JavaScript disabled, but you may still upload files"
+    "noScriptMessage": "Please enable JavaScript to continue"
   },
   "Relationship": {
     "label": "Relationship to you",
