--- a/participant/public/locales/en/common.json
+++ b/participant/public/locales/en/common.json
@@ -147,8 +147,8 @@
     "label": "Upload documents",
     "document": "Document",
     "ifNeeded": "(if needed)",
-    "noFiles": "Choose a file to upload",
-    "additionalFiles": "Choose another file to upload",
+    "noFiles": "Click to choose a file to upload",
+    "additionalFiles": "Click to choose another file to upload",
     "filetypehint": "You can select a PDF, JPEG, PNG, or GIF file.",
     "altText": "Image preview for",
     "fileTypeError": "This is not a valid file type.",
