--- a/participant/public/locales/en/common.json
+++ b/participant/public/locales/en/common.json
@@ -106,6 +106,11 @@
   "Index": {
     "button": "Get started",
     "eligible": "You can fill out this form if:",
+    "feedback": {
+      "heading": "Already attended your recertification appointment?",
+      "links": ["https://forms.gle/hYeQhm6ZjaWE7gQFA"],
+      "text": "We’d love to hear feedback about your experience. Please respond to <0>this 3 question survey.</0>"
+    },
     "intro": "You can now prepare for your recertification appointment with your local Montana WIC clinic.",
     "ifList": [
       "You have received this link from your local WIC clinic.",
