[PRP-347] Two pages for Rocket to peek at

--- a/participant/stories/docs/Readme.stories.mdx
+++ b/participant/stories/docs/Readme.stories.mdx
@@ -1,12 +1,14 @@
-import Readme from "../../README.md";
+import Readme from "../../../docs/participant/README.md";
 import { Meta, Description } from "@storybook/addon-docs";
 
 <Meta title="Docs/📝 Intro" />
 
-# 📝 Project Readme
-
-## This is an import of the project's Readme for convenience
+# 📝 Overview
 
 ---
 
 <Description>{Readme}</Description>
+
+# Next Steps
+
+- How to develop on the [Participant Portal](?path=/story/docs-%F0%9F%9B%A0%EF%B8%8F-development--page)
